<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivityironman">

    <Button
        android:id="@+id/btnvoltart5"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="609dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="btnvoltar5"
        android:text="@string/btnvoltar5"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtbioiron"
        android:layout_width="371dp"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="341dp"
        android:text="@string/txtbioiron"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtsusiron"
        android:layout_width="225dp"
        android:layout_height="192dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="409dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="130dp"
        android:text="@string/txtsusiron"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtvideoim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="454dp"
        android:onClick="txtvideoiron"
        android:text="@string/txtvideoim"
        android:textColor="#F44336"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imgiron"
        android:layout_width="416dp"
        android:layout_height="213dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="516dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ironman"
        tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds" />

    <ImageView
        android:id="@+id/imgtecnologia"
        android:layout_width="95dp"
        android:layout_height="96dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tecnologia"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>