<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivityaquaman">

    <Button
        android:id="@+id/btnvoltaraqua"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="609dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#2196F3"
        android:onClick="btnvoltaraqua"
        android:text="@string/btnvoltaraqua"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="s" />

    <TextView
        android:id="@+id/txtbioaqua"
        android:layout_width="365dp"
        android:layout_height="119dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="320dp"
        android:text="@string/txtbioaqua"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/txtsusaqua"
        android:layout_width="249dp"
        android:layout_height="157dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="149dp"
        android:text="@string/txtsusaqua"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtvideoaqua"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="438dp"
        android:minHeight="48dp"
        android:onClick="txtvideoaqua"
        android:text="@string/txtvideoaqua"
        android:textColor="#00BCD4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imgaqua"
        android:layout_width="446dp"
        android:layout_height="237dp"
        android:layout_marginBottom="521dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="@drawable/aquaman"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgmar"
        android:layout_width="89dp"
        android:layout_height="76dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="216dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mar3"
        tools:ignore="ContentDescription,HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>